--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+commonlibsse-sys = { path = "../rusting_up" }
